--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,12 @@
         <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body>
-        <h1>aqui vamos a hacer un blog de post</h1>
-        <p>Y este es el parrafo de inicio</p>
-    </body>
+        <div>
+            <div>
+                <h1>Este es el titulo attractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar 
+                    cosas increibles que se pueden hacer con ramas</p>
+            </div>
+        </div>
+    </body> 
 </html>
