--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
                 <h1>Este es el titulo attractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar 
                     cosas increibles que se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir infrmacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. 
+                    Excepto si eres un Rockstar, pero estadisticamente no lo eres... por ahora.
+                </p>
             </div>
         </div>
     </body> 
